<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="50dp" >
    <ImageView
        android:id="@+id/icon_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/resticon_foreground"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/restname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_vertical"
        android:text="@string/restaurant_name"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp" >
        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_foreground"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp" />

        <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
            android:layout_gravity="center_vertical"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp" >
        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconphone"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp" />
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/icon_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icondesciption"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/rdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/icon_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconrating"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp" />
    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    </LinearLayout>

</LinearLayout>